--- a/CSS_CLASS-2/shadows/style.css
+++ b/CSS_CLASS-2/shadows/style.css
@@ -29,19 +29,20 @@ h3{
     
 }
 
-/* div{
+div{
     border: 1px solid black;
     height: 50px;
     width: 100px;
     padding: 10px;
     box-sizing: border-box;
     background-image: linear-gradient(to right,green , blue);
-    box-shadow: 2px 2px 2px yellow;
-} */
+    box-shadow: 10px 10px 2px   ;
+}
 
 
 .div2{
     height: 100px;
+    width:200px;
     border: 1px solid;
     background-image: linear-gradient(to top right , yellow, blue);
     box-sizing: border-box;
