--- a/CSS_CLASS-2/transform/style.css
+++ b/CSS_CLASS-2/transform/style.css
@@ -1,17 +1,22 @@
 .box{
+    width: 100px;
     background-color: aqua;
     /* margin: 20px; */
-    transform: translate();
+     transform: translate(0px,250px);
+    /*transform: rotate(11deg); */
+    transform: scale(0.5,0.5);
     /* ye hai left right adjustment ke liye  */
     /* transform: rotate(0deg); */
 
     /* transform: scale(5,4); */
-    /* transform: skew(25deg); */
+    transform: skew(16deg);
 
 
 
 }
-#divi{
+
+
+/* #divi{
     border: 1px solid black;
 
 }
@@ -20,4 +25,4 @@
 }
 #right{
     position: right;
-}
+} */
